# pjecz-pagos-cliente-flask

./: .gcloudignore  .gitignore  README.md  app.yaml  appserver.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  gcloud-app-deploy.yml
config/: settings.py
lib/: hashids.py  safe_string.py
pagos_cliente/: app.py  extensions.py
pagos_cliente/blueprints/avisos/: views.py
pagos_cliente/blueprints/avisos/templates/avisos/: aviso.jinja2  preguntas_frecuentes.jinja2
pagos_cliente/blueprints/carros/: forms.py  views.py
pagos_cliente/blueprints/resultados/: views.py
pagos_cliente/blueprints/resultados/templates/resultados/: fallido.jinja2
pagos_cliente/blueprints/sistemas/: views.py
pagos_cliente/blueprints/sistemas/templates/sistemas/: 403.jinja2  404.jinja2  start.jinja2
pagos_cliente_flask/: app.py  extensions.py
pagos_cliente_flask/blueprints/avisos/: views.py
pagos_cliente_flask/blueprints/avisos/templates/avisos/: aviso.jinja2  preguntas_frecuentes.jinja2
pagos_cliente_flask/blueprints/carros/: forms.py  views.py
pagos_cliente_flask/blueprints/carros/templates/carros/: comprobante.jinja2  ingresar.jinja2  revisar.jinja2
pagos_cliente_flask/blueprints/resultados/: views.py
pagos_cliente_flask/blueprints/resultados/templates/resultados/: abortado.jinja2  fallido.jinja2  pagado.jinja2
pagos_cliente_flask/blueprints/sistemas/: views.py
pagos_cliente_flask/blueprints/sistemas/templates/sistemas/: 400.jinja2  403.jinja2  404.jinja2  500.jinja2  start.jinja2
pagos_cliente_flask/static/css/: style.css
pagos_cliente_flask/templates/layouts/: app.jinja2  base.jinja2
pagos_cliente_flask/templates/macros/: form.jinja2
