[tool.poetry]
name = "pjecz-pagos-cliente-flask"
version = "2.2.0"
description = "Front-End del Portal de Pagos hecho con Flask."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "pjecz_pagos_cliente_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
hashids = "^1.3.1"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
pylint = "^3.1.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
