[tool.poetry]
name = "pjecz-pagos-cliente-flask"
version = "2.0.0"
description = "Front-End del Portal de Pagos hecho con Flask."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-wtf = "^1.2.2"
google-auth = "^2.37.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.22.1"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
jinja2 = "^3.1.5"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
unidecode = "^1.3.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.3"
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
